--- a/Elements/Content/GenericSingleDisplay.xaml
+++ b/Elements/Content/GenericSingleDisplay.xaml
@@ -1,12 +1,54 @@
-﻿<UserControl x:Class="Vidiya.Elements.Content.GenericSingleContentSourceDisplay"
+﻿<UserControl x:Class="Vidiya.Elements.Content.GenericSingleDisplay"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Vidiya.Elements.Content" 
              xmlns:generics="clr-namespace:Vidiya.Elements.Generics"
-             xmlns:content="clr-namespace:Vidiya.Elements.Content"
+             xmlns:content="clr-namespace:Vidiya.Elements.Content" xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="902.8" d:DesignWidth="382.8">
-    <content:GenericPlaylistContentDisplay x:Name="ContentElement"/>
+             d:DesignHeight="611.8" d:DesignWidth="526.8">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="48.6"/>
+            <RowDefinition Height="{Binding ActualHeight, ElementName=ContentGrid, Mode=OneWay}"/>
+        </Grid.RowDefinitions>
+
+        <generics:VidiyaRect Grid.Row="0" Grid.RowSpan="2"/>
+        <generics:VidiyaRect Grid.Row="0" Grid.RowSpan="1"/>
+
+        <materialIcons:MaterialIcon 
+            Grid.Row="0" Width="40" Height="40" HorizontalAlignment="Left" 
+            x:Name="StateIcon" 
+            Kind="HelpCircleOutline" 
+            Foreground="#8CADB4" 
+            Margin="20,0"
+            ToolTipService.InitialShowDelay="0"/>
+
+        <materialIcons:MaterialIcon 
+            Grid.Row="0" Width="40" Height="40" HorizontalAlignment="Right" 
+            x:Name="TypeIcon" 
+            Kind="Youtube" 
+            Foreground="#8CADB4" 
+            Margin="20,0"/>
+
+        <TextBlock Grid.Row="0" 
+                   VerticalAlignment="Center" HorizontalAlignment="Center"
+                   FontSize="30" Foreground="#8CADB4"
+                   >YouTube Single</TextBlock>
+
+        <Grid x:Name="ContentGrid" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="10"/>
+                <RowDefinition Height="{Binding ActualHeight, ElementName=ContentElement, Mode=OneWay}"/>
+                <RowDefinition Height="10"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="10"/>
+            </Grid.ColumnDefinitions>
+            <content:GenericContentDisplay Grid.Row="1" Grid.Column="1" x:Name="ContentElement"/>
+        </Grid>
+    </Grid>
 </UserControl>
