--- a/Elements/MediaControls/SecondaryMediaControl.xaml
+++ b/Elements/MediaControls/SecondaryMediaControl.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Vidiya.Elements" xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF" xmlns:Generic="clr-namespace:Vidiya.Elements.Generics"
+             xmlns:local="clr-namespace:Vidiya.Elements" 
+             xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF" 
+             xmlns:Generic="clr-namespace:Vidiya.Elements.Generics"
              mc:Ignorable="d" 
              d:DesignHeight="48.6" d:DesignWidth="330">
     
