--- a/Elements/Menus/ContentMenu.xaml
+++ b/Elements/Menus/ContentMenu.xaml
@@ -1,16 +1,13 @@
-﻿<UserControl x:Class="Vidiya.Elements.Menus.QueueMenu"
+﻿<UserControl x:Class="Vidiya.Elements.Menus.ContentMenu"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Vidiya.Elements.Menus" 
-             xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF" 
              xmlns:generics="clr-namespace:Vidiya.Elements.Generics" 
+             xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF" 
              xmlns:content="clr-namespace:Vidiya.Elements.Content"
-             mc:Ignorable="d" 
-             d:DesignHeight="1080" d:DesignWidth="480">
-
-
+             mc:Ignorable="d" d:DesignHeight="970" d:DesignWidth="680">
     <Grid>
 
         <generics:VidiyaRect/>
@@ -28,7 +25,7 @@
             <TextBlock Grid.Row="0" 
                        VerticalAlignment="Center" HorizontalAlignment="Center"
                        FontSize="40" Foreground="#8CADB4"
-                       >Queue</TextBlock>
+                       >Content</TextBlock>
 
             <Button Margin="8.6,4.3" Grid.Row="0" HorizontalAlignment="Left" x:Name="ReturnButton" Style="{StaticResource VidiyaButton}" Click="ReturnButton_Click" Width="40" Height="40">
                 <Grid>
@@ -37,14 +34,18 @@
                 </Grid>
             </Button>
 
-            <ScrollViewer x:Name="ContentScroll" Grid.Column="1" Grid.Row="1" Margin="10" VerticalScrollBarVisibility="Auto">
+            <ScrollViewer x:Name="ContentScroll" 
+                          Grid.Column="1" 
+                          Grid.Row="1" 
+                          Margin="10,5" 
+                          VerticalScrollBarVisibility="Auto">
                 <StackPanel x:Name="ContentView"
                             Width="{Binding ActualWidth, ElementName=ContentScroll, Mode=OneWay}"
                             Height="{Binding ActualHeight, ElementName=ContentScroll, Mode=OneWay}" 
                             SizeChanged="ContentView_SizeChanged"
                             Loaded="ContentView_Loaded">
-                    <content:GenericPlaylistDisplay />
-                    <content:GenericSingleDisplay />
+                    <content:GenericPlaylistDisplay Margin="0,5" />
+                    <content:GenericSingleDisplay  Margin="0,5" />
                 </StackPanel>
             </ScrollViewer>
         </Grid>
